# haskell-progress

./: .gitignore
YeabNigusse/BlockChain-Plutus/: Blockchain.py
YeabNigusse/CodeForce/: DivisibilityProblem.hs  Watermelon.hs  WayTooLongWords.hs
YeabNigusse/Exercism/: ArmstrongNumbers.hs  BST.hs  Clock.hs  ComplexNumbers.hs  CryptoSquare.hs  IsbnVerifier.hs  Isogram.hs  ListOps.hs  Panagram.hs  Phone.hs  Queens.hs  ResistorColors.hs  SecretHandshake.hs  Squares.hs  Transpose.hs
YeabNigusse/Hacker Rank/: GradingSystem.hs  appleAndOrange.hs  solveMeFirst.hs
YeabNigusse/Home Work/Homework10/: AParser.hs  CHANGELOG.md  Homework10.cabal
YeabNigusse/Home Work/Homework10/dist-newstyle/cache/: compiler  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
YeabNigusse/LearnYouHaskellNotes/: FunctorsAndMonoids.hs  InputOutput.hi  InputOutput.hs  Recursion.hs  StartingOut.hs  Yeab.txt  girlfriend.txt  higherOrder.hs  typeClasses.hs
YeabNigusse/Notes/: FunctorsAndMonoids.hs  fistfulMonads.hs  haiku.txt
YeabNigusse/Random Excercise/: book.hs  largerNumber.hs  matrix.hs
YeabNigusse/RandomExcercise/: ascendNumbers.hs  evenOdd.hs  matrix.hs
YeabNigusse/exercismSolvedProblems/: Acronym.hs  Anagram.hs  CryptoSquare.hs  Hamming.hs  Luhn.hs  Pascal'sTriangle.hs  PerfectNumbers.hs  Phone.hs  Prime.hs  Queens.hs  RNATranscription.hs  ResistorColorPair.hs  RunLength.hs  Strain.hs  Triangle.hs  TwelveDays.hs
YeabNigusse/haskellSolvedProblem/: CollatzConjecture.hs  LeapYear.hs
YeabNigusse/haskellSolvedProblems/: Bob.hs  CollatzConjecture.hs  DNA.hs  Grains.hs  SpaceAge.hs  homework_1.1.hs
YeabNigusse/homeWorkProblems/: homework_1.2.hs
eyob/anagram/: anagram.cabal
eyob/clock/: exercism-clock.cabal
eyob/crypto-square/: crypto-square.cabal
eyob/leap/: leap.cabal
eyob/luhn/: luhn.cabal
eyob/nth-prime/: nth-prime.cabal
eyob/pangram/: pangram.cabal
eyob/pascals-triangle/: pascals-triangle.cabal
eyob/secret-handshake/: README.md
eyob/sum-of-multiples/: README.md  sum-of-multiples.cabal
kenenisa/: Anagram.py  BeerSong.hs  BinarySearchTree.hs  Clock.hs  CollatzConjecture.hs  CryptoSquare.hs  DifferenceofSquares.hs  HammingDistance.hs  LeapYear.hs  Luhn.hs  Minesweeper.hs  NucleotideCount.hs  PhoneNumber.hs  QueenAttack.hs  README.MD  RNATranscription.hs  ResistorColors.hs  Robot Simulator.hs  Run-LengthEncoding.hs  ScrabbleScore.hs  SecretHandshake.hs  SpaceAge.hs  Strain.hs  TriangleType.hs  TwelveDays.hs  WordCount.hs  acronym.hs  bob.hs  grains.hs  nth-prime.hs  pangram.hs  pascals-triangle.hs  sumeOfMultiples.hs
kenenisa/Codeforces/: A - Test 123.hs  B - Grandpa.hs  C - Haile !!!.hs  D - A2SVians.hs  E - Traffic Light.hs  README.MD
kenenisa/Projects/: mergeSort.hs
kenenisa/Projects/weather/: README.MD  weather.cabal
kenenisa/Projects/weather/app/: Main.hs  Methods.hs  Skeleton.hs
kenenisa/Projects/weather/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
leul/1_basics/: conditions.hs  functions.hs  helloworld.hs  lists.hs  lists_continued.hs
leul/4_guards/: let_binding.hs
leul/5_recursion/: quick_sort.hs
leul/6_higherorder_functions/: fold.hs
leul/7_modules/: cipher_module.hs  listmodule.hs
leul/8_types_and_type_classes/: shapes.hs
leul/PracticalHaskell/: data.hs  minmax.hs  readme.md
leul/cis194/: README.md
leul/cis1940/: homework_1.hs
leul/exercism/: 12days.hs  Acronyme.hs  Anagrams.hs  BST.hs  Bob.hs  Clock.hs  CollatzConjucture.hs  CryptoSquare.hs  DNA.hs  Grains.hs  Hamming.hs  Isograms.hs  LeapYear.hs  Luhn.hs  NucleotideCount.hs  Pangram.hs  PascalsTriangle.hs  PerfectNumbers.hs  Primes.hs  ProtienTranslation.hs  Queens.hs  Raindrops.hs  ResistorColorTrio.hs  ResistorColors.hs  Robot.hs  RunLengthEncoding.hs  SecretHandshake.hs  SpaceAge.hs  Strains.hs  SumOfMultiples.hs  Triangle.hs  WordCount.hs  Yacht.hs  readme.md  rot13.hs  sumOfSquares.hs
leul/functional_parsing/: JSONParse.hs  Parsing.hs  ex_1.json  ex_2.json
leul/iohkedu/Concur/: CHANGELOG.md  concur.cabal
leul/iohkedu/Concur/app/: Concurrency.hs  Main copy.hs  Main.hs  test.py
leul/projects/: .gitignore
surafel/: README.md  exercismExercises.hs  foldingExercises.hs  mapExercises.hs  recursionExercises.hs  reversePolishCalculator.hs
surafel/CIS194/: homework1.hs  homework3.hs
surafel/JSONLib/: SimpleJson.hs
tollan/exercism/: Acronym.hs  Anagram.hs  BST.hs  Bob.hs  Clock.hs  CollatzConjecture.hs  CryptoSquare.hs  Grains.hs  Hamming.hs  Luhn.hs  Minesweeper.hs  NucleotideCount.hs  Pangram.hs  PerfectNumbers.hs  Phone.hs  Queens.hs  RNA Transcription.hs  SecretHandshake.hs  SpaceAge.hs  Strain.hs  SumOfMultiples.hs  Triangle.hs
tollan/learnyouahaskell - notes/: learnhs_2.hs  (+1 more)
yeabeseraD/: Acronym.hs  CryptoSquare.hs  Pangram.hs  RNATranscirbe.hs  secretHandShake.hs  sumOfMultiples.hs
yeabeseraD/Homeworks/Homework 12/Risk/: CHANGELOG.md  LICENSE  Risk.cabal
yeabeseraD/Homeworks/Homework 12/Risk/app/: Main.hs  Risk.hs
yeabeseraD/Homeworks/Homework 12/Risk/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
yeabeseraD/iohkedu/MonadExcersise/: CHANGELOG.md  MonadExcersise.cabal
yeabeseraD/iohkedu/MonadExcersise/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
yeabeseraD/iohkedu/MonadExcersise/src/: MyLib.hs
yeabeseraD/iohkedu/chatServer/: CHANGELOG.md  chatServer.cabal
yeabeseraD/iohkedu/chatServer/app/: Main.hs
yeabeseraD/iohkedu/chatServer/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
yeabeseraD/iohkedu/networkServer/: CHANGELOG.md  networkServer.cabal
yeabeseraD/iohkedu/networkServer/app/: Client.hs  Main.hs  Shared.hs
yeabeseraD/iohkedu/networkServer/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
yeabeseraDerese/: RNATranscirbe.hs  SpaceAge.hs
(+379 files in other folders)
