cabal-version:      2.4
name:               Homework10
version:            0.1.0.0
author:             Yeabsira Nigussie
maintainer:         nigusseyeabsira@gmail.com
extra-source-files: CHANGELOG.md

executable Homework10
    main-is:          Employee.hs
    build-depends:    base ^>=4.16.4.0,HUnit
    hs-source-dirs:   app
    default-language: Haskell2010
