cabal-version:      2.4
name:               concur
version:            0.1.0.0
author:             Leul Wujira
maintainer:         meraf000@gmail.com
extra-source-files: CHANGELOG.md

executable concur
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      network
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -with-rtsopts=-N
