cabal-version:   3.0
name:            networkServer
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Yagth
maintainer:      yabuman46@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable networkServer
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.14.0.0
                    , network == 2.6.3.6
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -threaded

executable networkClient
    import:           warnings
    main-is:          Client.hs
    build-depends:    base ^>=4.14.0.0
                    , network == 2.6.3.6
    hs-source-dirs:   app
    default-language: Haskell2010
