cabal-version:   3.0
name:            Risk
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Yagth
maintainer:      yabuman46@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Risk
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      base-compat,
                      transformers,
                      MonadRandom
    hs-source-dirs:   app
    default-language: Haskell2010
